package org.arvinw.example10;

public interface DualPin {

    public void electrify(int l,int n);
}
