package org.arvinw.example10;

public interface TriplePin {

    public void electrify(int l,int n,int e);
}
